--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta name="google" value="notranslate" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>SellIt Back End Walkthrough</title>
 
-<meta name="google" value="notranslate" /> 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>Created by Camtasia 9</title>
+    <style>
+      html,
+      body {
+        margin: 0px;
+        padding: 0px;
+        font-family: Verdana, Geneva, sans-serif;
+        background-color: #1a1a1a;
+        text-align: center;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
 
-<style>
-html, body {
-	margin: 0px;
-	padding: 0px;
-	font-family:Verdana, Geneva, sans-serif;
-	background-color: #1a1a1a;
-	text-align: center;
-	width: 100%;
-    height: 100%; 
-}
-
-</style>
-
-<link href="assets/images/walkthrough/walkthrough_embed.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<iframe class="tscplayer_inline" id="embeddedSmartPlayerInstance" src="assets/images/walkthrough/walkthrough_player.html?embedIFrameId=embeddedSmartPlayerInstance" scrolling="no" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-
-</body>
+    <link
+      href="assets/images/walkthrough/walkthrough_embed.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
+    <iframe
+      class="tscplayer_inline"
+      id="embeddedSmartPlayerInstance"
+      src="assets/images/walkthrough/walkthrough_player.html?embedIFrameId=embeddedSmartPlayerInstance"
+      scrolling="no"
+      frameborder="0"
+      webkitAllowFullScreen
+      mozallowfullscreen
+      allowfullscreen
+    ></iframe>
+  </body>
 </html>
